# webshot

./: .clang-tidy  .clangd  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  build_san.sh  conanfile.py  conventional_commits.md  delegated_devenv.sh  development_deps.txt  devenv.nix  devenv.yaml  docker-compose.yaml  docs.md  flake.nix  lsan.supp  manually_create_s3_bucket.py  pyproject.toml  userver_config.yaml
.forgejo/: devenv_ci.sh
arkhiv/: CMakeLists.txt
compose_tools/: infra.py  webshotd.py
config/: config_vars.debug.yaml  config_vars.prod.debug.yaml  config_vars.prod.yaml  config_vars.testsuite.yaml  dns_hosts_test  static_config.yaml  userver_config.yaml
container/: nginx.conf  nginx_test.conf
containers/: nginx-test.conf  nginx.conf  service-db-init-multi-db.sh  user_netpol.sh  verify_netpol.sh
crawlerd/: .gitignore  .npmrc  devenv_module.nix  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  upstream.md
devenv/: build_task.py  ctx.nix  drv.nix  flake_shim.nix  lib.nix  outputs.nix  pgmigrate_task.py  qa.nix  remote_compile.py  run_testsuite_tests.py  run_unit_tests.py  sets.nix  shared.nix  srcs.nix  tasks.nix  toolchain.nix  webshot.nix
dex/: config.yaml  docker-compose.yaml
docker/: docker-compose.yaml  docker_user_netpol.sh  entrypoint_netpol.sh  nginx.conf  storage-nginx.conf  testing-docker-compose.yaml
docs/: cpp.md
include/: by_id_handler.hpp  config.hpp  container_guard.hpp  crud.hpp  cursor.hpp  denylist.hpp  denylist_check_handler.hpp  link.hpp  (+20 more)
(+480 files in other folders)
